--- a/meshcentral-web/public/styles/custom.css
+++ b/meshcentral-web/public/styles/custom.css
@@ -239,7 +239,7 @@ td {
     vertical-align: middle !important;
 }
 
-.style10 {
+#devs .style10 {
     flex: 1 !important;
     min-width: 0 !important;
     height: 100% !important;
